# synapse

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.postgres.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/: admin.py  config.py  cursors.py  db.py  main.py  mentions.py  models.py  push.py  realtime.py
api/auth/: channel_access.py  dependency.py  passwords.py  tokens.py
api/routes/: admin.py  auth.py  channels.py  messages.py  ws.py
docs/: AGENT_PROTOCOL.md  DESIGN.md  ONBOARDING.md  PRD.md  SUBSCRIPTION_MODEL.md
migrations/: env.py
migrations/versions/: 27ba4a768725_accounts_add_push_opt_in_columns.py  d1b2c4e8f3a7_push_secret_rename_for_hmac.py  ded4d80a9140_initial_schema.py
scripts/: bootstrap.sh  entrypoint.sh  quickstart.sh
tests/: test_mentions.py
web/: Caddyfile  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AdminLayout.tsx  AppLayout.tsx  Composer.tsx  MessageBody.tsx  Modal.tsx  RequireAuth.tsx  ThemeToggle.tsx  Wordmark.tsx
web/src/lib/: admin.ts  api.ts  auth.ts  format.ts  messages.ts  realtime.ts  theme.ts
web/src/pages/: AdminAccountsPage.tsx  AdminChannelsPage.tsx  AdminTokensPage.tsx  ChannelPage.tsx  HomePage.tsx  LoginPage.tsx
web/src/styles/: tokens.css
